bitbybit/tests/no_compile/invalid_bit_pos/invalid_bits_pos_u16.rs
use bitbybit::bitfield;

#[bitfield(u16, default = 0)]
struct Test {
    #[bits(15..=16, rw)]
    field: u2,
}

fn main() {}
